improved buffer. css fix for ticker on mobile. 15 aug update.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -480,6 +480,9 @@ span{
         font-size: 0.9em;
         line-height: 1.4em;
         }
+        @media(max-width: 400px){
+            font-size: 0.8em;
+        }
     }
 
     .chart-container{
